test/libsolidity/syntaxTests/structs/recursion/recursive_struct_with_internal_function_as_library_function_parameter.sol
library Test {
    struct MyStructName {
        address addr;
        MyStructName[] x;
        function() internal y;
    }

    function f(MyStructName storage s) public {}
}
// ----
// TypeError: (142-164): Internal type is not allowed for public or external functions.
